--- a/sass/elements/game/_inbox.scss
+++ b/sass/elements/game/_inbox.scss
@@ -18,14 +18,13 @@
             @include ipadPro {
                 border-right: 10px solid $color-gray-dark;
             }
-           @include tablet {
+            @include tablet {
                 border-right: none;
-           }
-        }
-         @include tablet {
-                width: 100%;
-               
             }
+        }
+        @include tablet {
+            width: 100%;
+        }
     }
     &__header {
         height: 50px;
@@ -48,6 +47,10 @@
         }
         @include mobileL {
             height: 40px;
+            border-bottom: 4px solid $color-gold;
+        }
+        @include mobileM {
+            height: 33px;
             border-bottom: 4px solid $color-gold;
         }
     }
@@ -80,6 +83,9 @@
         }
         @include mobileL {
             height: calc(100% - 40px);
+        }
+        @include mobileM {
+            height: calc(100% - 33px);
         }
         li {
             display: flex;
@@ -176,12 +182,16 @@
         @include tablet {
             padding: 1px 13px;
             height: 63px;
-            
         }
         @include mobileL {
             padding: 1px 9px;
             height: 44px;
             margin-bottom: 6px;
+        }
+        @include mobileM {
+            padding: 1px 7px;
+            height: 42px;
+            margin-bottom: 4px;
         }
     }
 
@@ -227,14 +237,14 @@
         border-left: 4px solid $color-gray-dark;
         overflow: hidden;
     }
-    &__closeMail{
+    &__closeMail {
         position: absolute;
         width: 47px;
         height: 47px;
         z-index: 2;
         top: 7px;
         right: 7px;
-        img{
+        img {
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -393,5 +403,4 @@
             font-style: italic;
         }
     }
-    
 }
