media - mobileM - nav

--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -59,10 +59,11 @@
     @include ipadPro {
         height: calc(100% - 68px);
     }
-    @include tablet {
-    }
     @include mobileL {
         height: calc(100% - 52px);
+    }
+    @include mobileM {
+        height: calc(100% - 43px);
     }
 }
 .game__errorWrapper {
