--- a/sass/elements/game/_wizard.scss
+++ b/sass/elements/game/_wizard.scss
@@ -38,6 +38,9 @@
         @include ipadPro {
             width: 75%;
         }
+        @include mobileM {
+            width: 64%;
+        }
     }
     &__descriptionWrapper {
         display: flex;
@@ -90,8 +93,11 @@
             border-radius: 20px;
         }
         @include mobileL {
-            height: 210px;
+            height: auto;
             border-radius: 16px;
+        }
+        @include mobileM {
+            border-radius: 13px;
         }
     }
     &__title {
@@ -121,6 +127,9 @@
             font-size: 32px;
             text-align: center;
         }
+        @include mobileM {
+            font-size: 28px;
+        }
     }
     &__text {
         font-size: 1.25rem;
@@ -136,7 +145,10 @@
         }
         @include mobileL {
             font-size: 18px;
-            text-align: center;
+            text-align: justify;
+        }
+        @include mobileM {
+            font-size: 16px;
         }
     }
     &__actionBar {
@@ -208,6 +220,12 @@
                 font-size: 1.55rem;
             }
         }
+        @include mobileL {
+            margin-top: 10px;
+            position: relative;
+            bottom: auto;
+            right: auto;
+        }
     }
     &__countdown {
         width: 100%;
@@ -262,6 +280,10 @@
             width: 71px;
             margin-bottom: 82px;
         }
+        @include mobileM {
+            width: 73px;
+            margin-bottom: 80px;
+        }
     }
 }
 .spinningWheel__content {
@@ -298,6 +320,10 @@
         width: 400px;
         height: 400px;
         border: 6px solid #ffd26a;
+    }
+    @include mobileM {
+        width: 360px;
+        height: 360px;
     }
     &-animation {
         animation: 10s an__spinning_wheel_rotate infinite;
@@ -336,6 +362,10 @@
         @include mobileL {
             width: 162px;
             left: 112px;
+        }
+        @include mobileM {
+            width: 144px;
+            left: 101px;
         }
     }
 
@@ -424,6 +454,10 @@
             border: 4px solid $color-gold;
             border-radius: 16px;
         }
+        @include mobileM {
+            border: 3px solid $color-gold;
+            border-radius: 13px;
+        }
     }
     &__img {
         width: 96%;
@@ -468,12 +502,30 @@
             margin-top: 3px;
             font-size: 17px;
         }
-        .market__itemDsc, .itemDsc {
+        .market__itemDsc,
+        .itemDsc {
             font-size: 12px;
             margin-top: 5px;
         }
         .market__itemStats td {
-            font-size:  12px;
+            font-size: 12px;
+        }
+    }
+}
+
+@include mobileM {
+    .wonItem__wrapper {
+        .market__itemRarity {
+            margin-top: 3px;
+            font-size: 15px;
+        }
+        .market__itemDsc,
+        .itemDsc {
+             font-size: 11px;
+            margin-top: 2px;
+        }
+        .market__itemStats td {
+            font-size: 10px;
         }
     }
 }
